build/log/idf_py_stdout_output_12938
[1/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[2/13] Performing build step for 'bootloader'
[1/1] cd /Users/dangminhtam/esp32-test/ir-remote/build/bootloader/esp-idf/esptool_py && /Users/dangminhtam/.espressif/python_env/idf5.3_py3.13_env/bin/python /Users/dangminhtam/esp/esp-idf/components/partition_table/check_sizes.py --offset 0xc000 bootloader 0x1000 /Users/dangminhtam/esp32-test/ir-remote/build/bootloader/bootloader.bin
Bootloader binary size 0x6050 bytes. 0x4fb0 bytes (45%) free.
[3/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/device.c.obj
[4/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/register_cmd.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/register_cmd.c.obj 
/Users/dangminhtam/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/dangminhtam/esp32-test/ir-remote/build/config -I/Users/dangminhtam/esp32-test/ir-remote/main/include -I/Users/dangminhtam/esp32-test/ir-remote/main/priv_include -I/Users/dangminhtam/esp/esp-idf/components/newlib/platform_include -I/Users/dangminhtam/esp/esp-idf/components/freertos/config/include -I/Users/dangminhtam/esp/esp-idf/components/freertos/config/include/freertos -I/Users/dangminhtam/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/dangminhtam/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/dangminhtam/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/dangminhtam/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/dangminhtam/esp/esp-idf/components/freertos/esp_additions/include -I/Users/dangminhtam/esp/esp-idf/components/esp_hw_support/include -I/Users/dangminhtam/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/dangminhtam/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/dangminhtam/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/dangminhtam/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/dangminhtam/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/dangminhtam/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/Users/dangminhtam/esp/esp-idf/components/heap/include -I/Users/dangminhtam/esp/esp-idf/components/log/include -I/Users/dangminhtam/esp/esp-idf/components/soc/include -I/Users/dangminhtam/esp/esp-idf/components/soc/esp32 -I/Users/dangminhtam/esp/esp-idf/components/soc/esp32/include -I/Users/dangminhtam/esp/esp-idf/components/hal/platform_port/include -I/Users/dangminhtam/esp/esp-idf/components/hal/esp32/include -I/Users/dangminhtam/esp/esp-idf/components/hal/include -I/Users/dangminhtam/esp/esp-idf/components/esp_rom/include -I/Users/dangminhtam/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/dangminhtam/esp/esp-idf/components/esp_rom/esp32 -I/Users/dangminhtam/esp/esp-idf/components/esp_common/include -I/Users/dangminhtam/esp/esp-idf/components/esp_system/include -I/Users/dangminhtam/esp/esp-idf/components/esp_system/port/soc -I/Users/dangminhtam/esp/esp-idf/components/esp_system/port/include/private -I/Users/dangminhtam/esp/esp-idf/components/xtensa/esp32/include -I/Users/dangminhtam/esp/esp-idf/components/xtensa/include -I/Users/dangminhtam/esp/esp-idf/components/xtensa/deprecated_include -I/Users/dangminhtam/esp/esp-idf/components/lwip/include -I/Users/dangminhtam/esp/esp-idf/components/lwip/include/apps -I/Users/dangminhtam/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/dangminhtam/esp/esp-idf/components/lwip/lwip/src/include -I/Users/dangminhtam/esp/esp-idf/components/lwip/port/include -I/Users/dangminhtam/esp/esp-idf/components/lwip/port/freertos/include -I/Users/dangminhtam/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/dangminhtam/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/dangminhtam/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/dangminhtam/esp/esp-idf/components/driver/deprecated -I/Users/dangminhtam/esp/esp-idf/components/driver/i2c/include -I/Users/dangminhtam/esp/esp-idf/components/driver/touch_sensor/include -I/Users/dangminhtam/esp/esp-idf/components/driver/twai/include -I/Users/dangminhtam/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/Users/dangminhtam/esp/esp-idf/components/esp_pm/include -I/Users/dangminhtam/esp/esp-idf/components/esp_ringbuf/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_gpio/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_spi/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_i2s/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/dangminhtam/esp/esp-idf/components/sdmmc/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_sdio/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_dac/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_rmt/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_tsens/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_sdm/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_i2c/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_uart/include -I/Users/dangminhtam/esp/esp-idf/components/vfs/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_ledc/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_parlio/include -I/Users/dangminhtam/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/dangminhtam/esp/esp-idf/components/esp_timer/include -I/Users/dangminhtam/esp/esp-idf/components/nvs_flash/include -I/Users/dangminhtam/esp/esp-idf/components/spi_flash/include -I/Users/dangminhtam/esp/esp-idf/components/esp_partition/include -I/Users/dangminhtam/esp/esp-idf/components/esp-iot-solution/components/button/include -I/Users/dangminhtam/esp/esp-idf/components/esp-iot-solution/components/button/interface -I/Users/dangminhtam/esp/esp-idf/components/esp_adc/include -I/Users/dangminhtam/esp/esp-idf/components/esp_adc/interface -I/Users/dangminhtam/esp/esp-idf/components/esp_adc/esp32/include -I/Users/dangminhtam/esp/esp-idf/components/esp_adc/deprecated/include -I/Users/dangminhtam/esp/esp-idf/components/console -I/Users/dangminhtam/esp/esp-idf/components/esp_vfs_console/include -I/Users/dangminhtam/esp/esp-idf/components/spiffs/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/dangminhtam/esp32-test/ir-remote=. -fmacro-prefix-map=/Users/dangminhtam/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DMAIN_VER_MAJOR=1 -DMAIN_VER_MINOR=0 -DMAIN_VER_PATCH=0 -Wno-format -DBUTTON_VER_MAJOR=4 -DBUTTON_VER_MINOR=1 -DBUTTON_VER_PATCH=3 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/register_cmd.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/register_cmd.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/register_cmd.c.obj -c /Users/dangminhtam/esp32-test/ir-remote/main/register_cmd.c
/Users/dangminhtam/esp32-test/ir-remote/main/register_cmd.c: In function 'ir_list_cmd':
/Users/dangminhtam/esp32-test/ir-remote/main/register_cmd.c:64:5: error: implicit declaration of function 'list_ir_keys_from_nvs'; did you mean 'list_ir_keys_from_spiffs'? [-Werror=implicit-function-declaration]
   64 |     list_ir_keys_from_nvs();
      |     ^~~~~~~~~~~~~~~~~~~~~
      |     list_ir_keys_from_spiffs
/Users/dangminhtam/esp32-test/ir-remote/main/register_cmd.c: In function 'ir_delete_key_cmd':
/Users/dangminhtam/esp32-test/ir-remote/main/register_cmd.c:78:21: error: implicit declaration of function 'delete_ir_key_from_nvs'; did you mean 'delete_ir_key_from_spiffs'? [-Werror=implicit-function-declaration]
   78 |     esp_err_t err = delete_ir_key_from_nvs(ir_key_args.key->sval[0]);
      |                     ^~~~~~~~~~~~~~~~~~~~~~
      |                     delete_ir_key_from_spiffs
cc1: some warnings being treated as errors
[5/13] No install step for 'bootloader'
[6/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ir_remote.c.obj
[7/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ir_learn.c.obj
ninja: build stopped: subcommand failed.
